# detection_adversaire

./: .gitignore  CMakeLists.txt  README.md  starter.cpp
src/: localization.cpp  localization.h  main.cpp  main.cpp.save
